--- a/src/app/editor/editor.component.css
+++ b/src/app/editor/editor.component.css
@@ -1,4 +1,39 @@
-.editor-container {
-  min-height: 100%;
-  background: #F0F0F0;
+.workspace {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: hidden;
 }
+
+.editor-scroll {
+  position: absolute;
+  top: 56px;
+  left: 0;
+  right: -14px;
+  bottom: -14px;
+  overflow: auto
+}
+
+
+.editor-container {
+  width: 2000px;
+  height: 2000px;
+  position: relative;
+  background: #F0F0F0;
+
+  /*touch-action: manipulation;
+  user-select: none;
+  -webkit-user-drag: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  transform: scale(1);
+  -webkit-font-smoothing: subpixel-antialiased;*/
+}
+
+svg {
+  height: 2000px;
+  width: 2000px;
+  position: relative;
+}
+
