--- a/src/app/node/node.component.css
+++ b/src/app/node/node.component.css
@@ -3,3 +3,35 @@
   padding: 5px;
   margin: 5px;
 }
+
+.node-circle {
+  fill: #F0F0F0;
+  stroke: #010101;
+  stroke-width: .7;
+  stroke-miterlimit: 10;
+}
+
+.node-text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1.5em;
+  font-family: sans-serif;
+  letter-spacing: 0px;
+  word-spacing: 0px;
+  fill: #000000;
+  fill-opacity: 1;
+}
+
+line {
+  stroke: #666;
+  stroke-width: 2
+}
+
+.plus-button {
+  font-family: FontAwesome, serif;
+  font-size: 1.5em;
+}
+
+.plus-button:hover {
+  cursor: pointer;
+}
