--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
         <a class="nav-link" (click)="navbarCollapsed = true">Getting Started</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" (click)="navbarCollapsed = true">Components</a>
+        <a class="nav-link" (click)="exportConversation()">Export</a>
       </li>
     </ul>
   </div>
