--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -2,9 +2,10 @@
 
 <div class="editor-scroll"  drag-scroll>
   <div class="editor-container" #container>
-    <conversation-node *ngFor="let n of nodes; let i = index"
+    <app-node-list [nodes]="nodes" (nodeCreated)="onNodeCreated($event)"></app-node-list>
+    <!--<conversation-node *ngFor="let n of nodes; let i = index"
                        [node]="n"
-                       (nodeCreated)="onNodeCreated($event)"></conversation-node>
+                       (nodeCreated)="onNodeCreated($event)"></conversation-node>-->
   </div>
 </div>
 </div>
