--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,8 +11,13 @@
       <li class="nav-item">
         <a class="nav-link" (click)="navbarCollapsed = true">Getting Started</a>
       </li>
+    </ul>
+  </div>
+
+  <div class="navbar-collapse navbar-right">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" (click)="exportConversation()">Export</a>
+        <a class="nav-link" (click)="toggleJsonBar()">Json View</a>
       </li>
     </ul>
   </div>
